Добавляет разметку крупных блоков main и footer

--- a/source/index.html
+++ b/source/index.html
@@ -40,12 +40,63 @@
           </a>
         </li>
       </ul>
-
     </nav>
   </header>
 
-  <main></main>
-  <footer></footer>
+  <main class="main-container">
+    <section class="hero">
+      <h1 class="visually-hidden">Сайт туристического городка в штате Аризона.</h1>
+      <img class="hero__text" src="#" width="#" height="#"
+        alt="Welcome to the gorgeous Sedona, beacause the Grand Canyon sucks!">
+    </section>
+    <section>
+      <h2>Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+      <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+      <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
+    </section>
+
+    <section>
+      <h2 class="visually-hidden">Блок поиска гостиницы.</h2>
+      <p>Заинтересовались?</p>
+      <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+      <a>Найти гостиницу</a>
+    </section>
+
+    <div class="map">
+      <iframe width="320" height="350">
+      </iframe>
+      <img src="#" width="320" height="350" alt="Метка адреса на карте.">
+    </div>
+
+  </main>
+  <footer>
+    <p>#visitSedona</p>
+    <ul class="social-list">
+      <li class="social-list__item">
+        <a class="social-list__link social-list__link--vk" href="https://vk.com/htmlacademy"
+          aria-label="Мы в ВКонтакте."></a>
+      </li>
+      <li class="social-list__item">
+        <a class="social-list__link social-list__link--telegram" href="https://t.me/htmlacademy"
+          aria-label="Мы в Телеграмм."></a>
+      </li>
+      <li class="social-list__item">
+        <a class="social-list__link social-list__link--youtube" href="https://www.youtube.com/user/htmlacademyru"
+          aria-label="Мы в Ютуб."></a>
+      </li>
+    </ul>
+
+    <div class="main-footer__copyright copyright">
+      <span class="copyright__text">Разработано</span>
+      <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Сайт HTML Academy."></a>
+    </div>
+  </footer>
 
 </body>
 
