--- a/source/index.html
+++ b/source/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <header class="main-header">
-    <a class="main-header__logo" href="#">
+    <a class="main-header__logo" href="index.html">
       <img class="main-header__logo-image" src="#" width="185" height="96"
         alt="Логотип туристического городка в штате Аризона.">
     </a>
@@ -41,31 +41,69 @@
         </li>
       </ul>
     </nav>
+
+    <section class="main-header__hero-block hero-block">
+      <h1 class="visually-hidden">Сайт туристического городка в штате Аризона.</h1>
+      <img class="hero-block__text" src="#" width="#" height="#"
+        alt="Welcome to the gorgeous Sedona, beacause the Grand Canyon sucks!">
+    </section>
   </header>
 
   <main class="main-container">
-    <section class="hero">
-      <h1 class="visually-hidden">Сайт туристического городка в штате Аризона.</h1>
-      <img class="hero__text" src="#" width="#" height="#"
-        alt="Welcome to the gorgeous Sedona, beacause the Grand Canyon sucks!">
-    </section>
-    <section>
-      <h2>Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
-      <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
-      <ol>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+
+    <section class="advantages">
+      <h2 class="advantages__title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+      <p class="advantages__description">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+      <ol class="advantages__list">
+        <li class="advantages__item">
+          <h3 class="advantages__content-title">Настоящий городок</h3>
+          <p class="advantages__content-number">— №1 —</p> <!--через каунтер-->
+          <p class="advantages__content-description">Седона не аттракцион для туристов, там течет своя жизнь</p>
+          <img>
+          <ul class="advantages__service-list">
+            <li class="advantages__service-item">
+              <h4 class="advantages__service-title">Жилье</h4>
+              <p class="advantages__service-description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+            </li>
+            <li class="advantages__service-item">
+              <h4 class="advantages__service-title">Еда</h4>
+              <p class="advantages__service-description">Всегда заказывайте фирменный бургер, Вы не разочаруетесь!</p>
+            </li>
+            <li class="advantages__service-item">
+              <h4 class="advantages__service-title">Сувениры</h4>
+              <p class="advantages__service-description">Не только китайского, но и местного производства!</p>
+            </li>
+          </ul>
+        </li>
+        <li class="advantages__item">
+          <h3 class="advantages__content-title">Там есть мост Дьявола</h3>
+          <p class="advantages__content-number">— №2 —</p> <!--через каунтер-->
+          <p class="advantages__content-description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+          <img>
+        </li>
+        <li class="advantages__item">
+          <h3 class="advantages__content-title">Небольшая площадь</h3>
+          <p class="advantages__content-number">— №3 —</p> <!--через каунтер-->
+          <p class="advantages__content-description">Все интересные места находятся очень близко</p>
+        </li>
+        <li class="advantages__item">
+          <h3 class="advantages__content-title">Красивая дорога</h3>
+          <p class="advantages__content-number">— №4 —</p> <!--через каунтер-->
+          <p class="advantages__content-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+        </li>
+        <li class="advantages__item">
+          <h3 class="advantages__content-title">Мало туристов</h3>
+          <p class="advantages__content-number">— №5 —</p> <!--через каунтер-->
+          <p class="advantages__content-description">Большинство едет в гранд каньон и толпится там</p>
+        </li>
       </ol>
     </section>
 
-    <section>
+    <section class="search-hotels">
       <h2 class="visually-hidden">Блок поиска гостиницы.</h2>
-      <p>Заинтересовались?</p>
-      <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-      <a>Найти гостиницу</a>
+      <p class="search-hotels__headline">Заинтересовались?</p>
+      <p class="search-hotels__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+      <a class="search-hotels__link"  href="#" aria-label="Страница поиска гостиницы.">Найти гостиницу</a>
     </section>
 
     <div class="map">
@@ -75,9 +113,10 @@
     </div>
 
   </main>
-  <footer>
-    <p>#visitSedona</p>
-    <ul class="social-list">
+
+  <footer class="main-footer">
+    <p class="main-footer__title">#visitSedona</p>
+    <ul class="main-footer__social-list social-list">
       <li class="social-list__item">
         <a class="social-list__link social-list__link--vk" href="https://vk.com/htmlacademy"
           aria-label="Мы в ВКонтакте."></a>
