Добавляет разметку в form

--- a/source/index.html
+++ b/source/index.html
@@ -102,8 +102,9 @@
     <section class="search-hotels">
       <h2 class="visually-hidden">Блок поиска гостиницы.</h2>
       <p class="search-hotels__headline">Заинтересовались?</p>
-      <p class="search-hotels__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-      <a class="search-hotels__link"  href="#" aria-label="Страница поиска гостиницы.">Найти гостиницу</a>
+      <p class="search-hotels__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения
+        гостиниц в Седоне</p>
+      <a class="search-hotels__link" href="#" aria-label="Страница поиска гостиницы.">Найти гостиницу</a>
     </section>
 
     <div class="map">
