--- a/source/index.html
+++ b/source/index.html
@@ -52,8 +52,8 @@
   <main class="main-container">
 
     <section class="advantages">
-      <h2 class="advantages__title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
-      <p class="advantages__description">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+      <h2 class="main-container__title title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+      <p class="main-container__description">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
       <ol class="advantages__list">
         <li class="advantages__item">
           <h3 class="advantages__content-title">Настоящий городок</h3>
