Добавляет разметку modal  в  form

--- a/source/form.html
+++ b/source/form.html
@@ -150,11 +150,25 @@
           <legend class="feedback-form__title title">Опишите свои эмоции:</legend>
           <textarea class="feedback-form__comment" name="comment" rows="5"
             placeholder="Опишите подробно все свои восторги">
-        </textarea>
+          </textarea>
         </fieldset>
         <div class="feedback-form__send">
           <button class="feedback-form__button button" type="submit">Отправить отзыв</button>
           <span class="feedback-form__text">* — обязательные поля</span>
+
+          <div class="feedback-form__modal modal">
+            <div class="modal__send">
+              <p class="modal__title">Ваш отзыв отправлен!</p>
+              <p class="modal__description">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его на сайте.</p>
+              <button class="modal__button button" type="submit">Закрыть окно</button>
+            </div>
+            <div class="modal__error">
+              <p class="modal__title">Что-то пошло не так!</p>
+              <p class="modal__description">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
+              <button class="modal__button button" type="submit">Ок</button>
+            </div>
+          </div>
+
         </div>
       </form>
 
