--- a/source/index.html
+++ b/source/index.html
@@ -11,8 +11,11 @@
 <body>
   <header class="main-header">
     <a class="main-header__logo" href="index.html">
-      <img class="main-header__logo-image" src="#" width="185" height="96"
-        alt="Логотип туристического городка в штате Аризона.">
+      <picture>
+        <source media="(min-width: 1200px)" srcset="img/sedona_logo.svg" type="image/svg" width="185" height="96">
+        <source media="(min-width: 768px)" srcset="img/sedona_logo.svg" type="image/svg" width="185" height="96">
+        <img class="main-header__logo-image" src="img/sedona_logo.svg" width="185" height="96" alt="Логотип туристического городка в штате Аризона.">
+      </picture>
     </a>
     <nav class="main-nav main-nav--opened main-nav--nojs">
       <button class="main-nav__toggle toggle" type="button">
@@ -59,7 +62,11 @@
           <h3 class="advantages__content-title">Настоящий городок</h3>
           <p class="advantages__content-number">— №1 —</p> <!--через каунтер-->
           <p class="advantages__content-description">Седона не аттракцион для туристов, там течет своя жизнь</p>
-          <img>
+          <picture>
+            <source media="(min-width: 1200px)" width="800" height="256" srcset="img/advantages-1-desktop.jpg 1x, img/advantages-1-desktop@2x.jpg 2x">
+            <source media="(min-width: 768px)" width="512" height="256" srcset="img/advantages-1-tablet.jpg 1x, img/advantages-1-tablet@2x.jpg 2x">
+            <img class="advantages__image" width="320" height="260" src="img/advantages-1-mobile.jpg" srcset="img/advantages-1-mobile@2x.jpg 2x" alt="Изображение городка.">
+          </picture>
           <ul class="advantages__service-list">
             <li class="advantages__service-item">
               <h4 class="advantages__service-title">Жилье</h4>
@@ -79,7 +86,11 @@
           <h3 class="advantages__content-title">Там есть мост Дьявола</h3>
           <p class="advantages__content-number">— №2 —</p> <!--через каунтер-->
           <p class="advantages__content-description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
-          <img>
+          <picture>
+            <source media="(min-width: 1200px)" width="800" height="256" srcset="img/advantages-2-desktop.jpg 1x, img/advantages-2-desktop@2x.jpg 2x">
+            <source media="(min-width: 768px)" width="512" height="256" srcset="img/advantages-2-tablet.jpg 1x, img/advantages-2-tablet@2x.jpg 2x">
+            <img class="advantages__image" width="320" height="260" src="img/advantages-2-mobile.jpg" srcset="img/advantages-2-mobile@2x.jpg 2x" alt="Изображение городка.">
+          </picture>
         </li>
         <li class="advantages__item">
           <h3 class="advantages__content-title">Небольшая площадь</h3>
