--- a/source/form.html
+++ b/source/form.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body>
+<body class="page__body">
   <header class="main-header">
     <a class="main-header__logo" href="index.html">
       <picture>
