--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
 
 <head>
   <meta charset="utf-8">
@@ -12,9 +12,8 @@
   <header class="main-header">
     <a class="main-header__logo" href="index.html">
       <picture>
-        <source media="(min-width: 1200px)" srcset="img/sedona_logo.svg" type="image/svg" width="185" height="96">
-        <source media="(min-width: 768px)" srcset="img/sedona_logo.svg" type="image/svg" width="185" height="96">
-        <img class="main-header__logo-image" src="img/sedona_logo.svg" width="185" height="96" alt="Логотип туристического городка в штате Аризона.">
+        <img class="main-header__logo-image" src="img/sedona_logo.svg" width="185" height="96"
+          alt="Логотип туристического городка в штате Аризона.">
       </picture>
     </a>
     <nav class="main-nav main-nav--opened main-nav--nojs">
@@ -39,23 +38,17 @@
         </li>
         <li class="main-nav__item">
           <a class="main-nav__link" href="#">
-            HTML ACADEMY
+            HTML Academy
           </a>
         </li>
       </ul>
     </nav>
-
-    <section class="main-header__hero-block hero-block">
-      <h1 class="visually-hidden">Сайт туристического городка в штате Аризона.</h1>
-      <img class="hero-block__text" src="#" width="#" height="#"
-        alt="Welcome to the gorgeous Sedona, beacause the Grand Canyon sucks!">
-    </section>
   </header>
 
   <main class="main-container">
 
     <section class="catalog">
-      <h2 class="main-container__title title">Фото и видео</h2>
+      <h1 class="main-container__title title">Фото и видео</h1>
       <p class="main-container__description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам
         забыть о политике и экономике.</p>
 
@@ -67,11 +60,13 @@
             <img class="catalog__image" width="140" height="112" src="#" srcset="#" alt="Изображение .">
           </picture>
         </a>
-        <h3 class="catalog__title title">
-          <a class="catalog__title-link" href="#">Неродные просторы</a>
-        </h3>
-        <span class="catalog__text">Автор фото: Борис</span>
-        <span class="catalog__like">1350</span>
+        <div class="catalog__wrapper">
+          <h2 class="catalog__title title">
+            <a class="catalog__title-link" href="#">Неродные просторы</a>
+          </h2>
+          <span class="catalog__text">Автор фото: Борис</span>
+          <span class="catalog__like">1350</span>
+        </div>
       </article>
 
       <article class="catalog__photo-block">
@@ -82,11 +77,13 @@
             <img class="catalog__image" width="140" height="112" src="#" srcset="#" alt="Изображение .">
           </picture>
         </a>
-        <h3 class="catalog__title title">
-          <a class="catalog__title-link" href="#">Местная растительность</a>
-        </h3>
-        <span class="catalog__text">Автор фото: Сергей</span>
-        <span class="catalog__like">143</span>
+        <div class="catalog__wrapper">
+          <h2 class="catalog__title title">
+            <a class="catalog__title-link" href="#">Местная растительность</a>
+          </h2>
+          <span class="catalog__text">Автор фото: Сергей</span>
+          <span class="catalog__like">143</span>
+        </div>
       </article>
 
       <article class="catalog__photo-block">
@@ -97,11 +94,13 @@
             <img class="catalog__image" width="140" height="112" src="#" srcset="#" alt="Изображение .">
           </picture>
         </a>
-        <h3 class="catalog__title title">
-          <a class="catalog__title-link" href="#">Дорога на север</a>
-        </h3>
-        <span class="catalog__text">Автор фото: Петр</span>
-        <span class="catalog__like">96</span>
+        <div class="catalog__wrapper">
+          <h2 class="catalog__title title">
+            <a class="catalog__title-link" href="#">Дорога на север</a>
+          </h2>
+          <span class="catalog__text">Автор фото: Петр</span>
+          <span class="catalog__like">96</span>
+        </div>
       </article>
 
       <article class="catalog__photo-block">
@@ -112,11 +111,13 @@
             <img class="catalog__image" width="140" height="112" src="#" srcset="#" alt="Изображение .">
           </picture>
         </a>
-        <h3 class="catalog__title title">
-          <a class="catalog__title-link" href="#">Мост дьявола</a>
-        </h3>
-        <span class="catalog__text">Автор фото: Антон</span>
-        <span class="catalog__like">254</span>
+        <div class="catalog__wrapper">
+          <h2 class="catalog__title title">
+            <a class="catalog__title-link" href="#">Мост дьявола</a>
+          </h2>
+          <span class="catalog__text">Автор фото: Антон</span>
+          <span class="catalog__like">254</span>
+        </div>
       </article>
 
       <div class="catalog__video-block">
