--- a/source/index.html
+++ b/source/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML Academy: Седона</title>
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body class="page__body">
@@ -49,6 +49,8 @@
       <img class="hero-block__text" src="#" width="#" height="#"
         alt="Welcome to the gorgeous Sedona, beacause the Grand Canyon sucks!">
     </section>
+
+
   </header>
 
   <main class="main-container">
@@ -56,7 +58,7 @@
     <section class="advantages">
       <h2 class="main-container__title title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
       <p class="main-container__description">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
-      <ol class="advantages__list">
+      <ul class="advantages__list">
         <li class="advantages__item">
           <h3 class="advantages__content-title">Настоящий городок</h3>
           <p class="advantages__content-number">— №1 —</p> <!--через каунтер-->
@@ -112,7 +114,7 @@
           <p class="advantages__content-number">— №5 —</p> <!--через каунтер-->
           <p class="advantages__content-description">Большинство едет в гранд каньон и толпится там</p>
         </li>
-      </ol>
+      </ul>
     </section>
 
     <section class="search-hotels">
