--- a/source/index.html
+++ b/source/index.html
@@ -18,7 +18,7 @@
         </picture>
       </a>
       <nav class="main-nav main-nav--opened main-nav--nojs">
-        <button class="main-nav__toggle toggle" type="button">
+        <button class="main-nav__toggle" type="button">
           <span class="visually-hidden">Открыть меню.</span>
         </button>
         <ul class="main-nav__list">
@@ -61,9 +61,11 @@
         <p class="main-container__description">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
         <ul class="advantages__list">
           <li class="advantages__item">
-            <h3 class="advantages__content-title">Настоящий городок</h3>
-            <p class="advantages__content-number">— №1 —</p> <!--через каунтер-->
-            <p class="advantages__content-description">Седона не аттракцион для туристов, там течет своя жизнь</p>
+            <div class="advantages__wrapper-blue">
+              <h3 class="advantages__content-title title">Настоящий городок</h3>
+              <p class="advantages__content-number">— №1 —</p> <!--через каунтер-->
+              <p class="advantages__content-description">Седона не аттракцион для туристов, там течет своя жизнь</p>
+            </div>
             <picture>
               <source media="(min-width: 1200px)" width="800" height="256"
                 srcset="img/advantages-1-desktop.jpg 1x, img/advantages-1-desktop@2x.jpg 2x">
@@ -74,23 +76,25 @@
             </picture>
             <ul class="advantages__service-list">
               <li class="advantages__service-item">
-                <h4 class="advantages__service-title">Жилье</h4>
+                <h4 class="advantages__service-title title">Жилье</h4>
                 <p class="advantages__service-description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
               </li>
               <li class="advantages__service-item">
-                <h4 class="advantages__service-title">Еда</h4>
+                <h4 class="advantages__service-title title">Еда</h4>
                 <p class="advantages__service-description">Всегда заказывайте фирменный бургер, Вы не разочаруетесь!</p>
               </li>
               <li class="advantages__service-item">
-                <h4 class="advantages__service-title">Сувениры</h4>
+                <h4 class="advantages__service-title title">Сувениры</h4>
                 <p class="advantages__service-description">Не только китайского, но и местного производства!</p>
               </li>
             </ul>
           </li>
           <li class="advantages__item">
-            <h3 class="advantages__content-title">Там есть мост Дьявола</h3>
-            <p class="advantages__content-number">— №2 —</p> <!--через каунтер-->
-            <p class="advantages__content-description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+            <div class="advantages__wrapper-blue">
+              <h3 class="advantages__content-title title">Там есть мост Дьявола</h3>
+              <p class="advantages__content-number">— №2 —</p> <!--через каунтер-->
+              <p class="advantages__content-description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+            </div>
             <picture>
               <source media="(min-width: 1200px)" width="800" height="256"
                 srcset="img/advantages-2-desktop.jpg 1x, img/advantages-2-desktop@2x.jpg 2x">
@@ -101,19 +105,25 @@
             </picture>
           </li>
           <li class="advantages__item">
-            <h3 class="advantages__content-title">Небольшая площадь</h3>
-            <p class="advantages__content-number">— №3 —</p> <!--через каунтер-->
-            <p class="advantages__content-description">Все интересные места находятся очень близко</p>
+            <div class="advantages__wrapper">
+              <h3 class="advantages__content-title title">Небольшая площадь</h3>
+              <p class="advantages__content-number">— №3 —</p> <!--через каунтер-->
+              <p class="advantages__content-description">Все интересные места находятся очень близко</p>
+            </div>
           </li>
           <li class="advantages__item">
-            <h3 class="advantages__content-title">Красивая дорога</h3>
-            <p class="advantages__content-number">— №4 —</p> <!--через каунтер-->
-            <p class="advantages__content-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            <div class="advantages__wrapper">
+              <h3 class="advantages__content-title title">Красивая дорога</h3>
+              <p class="advantages__content-number">— №4 —</p> <!--через каунтер-->
+              <p class="advantages__content-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            </div>
           </li>
           <li class="advantages__item">
-            <h3 class="advantages__content-title">Мало туристов</h3>
-            <p class="advantages__content-number">— №5 —</p> <!--через каунтер-->
-            <p class="advantages__content-description">Большинство едет в гранд каньон и толпится там</p>
+            <div class="advantages__wrapper">
+              <h3 class="advantages__content-title title">Мало туристов</h3>
+              <p class="advantages__content-number">— №5 —</p> <!--через каунтер-->
+              <p class="advantages__content-description">Большинство едет в гранд каньон и толпится там</p>
+            </div>
           </li>
         </ul>
       </section>
