--- a/source/index.html
+++ b/source/index.html
@@ -48,8 +48,10 @@
 
       <section class="main-header__hero-block hero-block">
         <h1 class="visually-hidden">Сайт туристического городка в штате Аризона.</h1>
-        <img class="hero-block__text" src="img/hero-text-index.svg" width="282" height="214"
+        <div class="hero-block__text">
+          <img class="hero-block__text-img" src="img/hero-text-index.svg" width="282" height="214"
           alt="Welcome to the gorgeous Sedona, beacause the Grand Canyon sucks!">
+        </div>
       </section>
 
 
@@ -168,7 +170,7 @@
       </div>
     </footer>
   </div>
-
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
