--- a/source/index.html
+++ b/source/index.html
@@ -63,7 +63,7 @@
         <h2 class="main-container__title title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
         <p class="main-container__description">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
         <ul class="advantages__list">
-          <li class="advantages__item">
+          <li class="advantages__item advantages__item--triangle">
             <div class="advantages__wrapper-blue">
               <h3 class="advantages__content-title title">Настоящий городок</h3>
               <p class="advantages__content-description">Седона не аттракцион для туристов, там течет своя жизнь</p>
@@ -77,15 +77,15 @@
                 srcset="img/advantages-1-mobile@2x.jpg 2x" alt="Изображение городка.">
             </picture>
             <ul class="advantages__service-list">
-              <li class="advantages__service-item">
+              <li class="advantages__service-item advantages__service-item--house">
                 <h4 class="advantages__service-title title">Жилье</h4>
                 <p class="advantages__service-description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
               </li>
-              <li class="advantages__service-item">
+              <li class="advantages__service-item advantages__service-item--food">
                 <h4 class="advantages__service-title title">Еда</h4>
                 <p class="advantages__service-description">Всегда заказывайте фирменный бургер, Вы не разочаруетесь!</p>
               </li>
-              <li class="advantages__service-item">
+              <li class="advantages__service-item advantages__service-item--gift">
                 <h4 class="advantages__service-title title">Сувениры</h4>
                 <p class="advantages__service-description">Не только китайского, но и местного производства!</p>
               </li>
@@ -128,7 +128,7 @@
 
       <section class="search-hotels">
         <h2 class="visually-hidden">Блок поиска гостиницы.</h2>
-        <p class="search-hotels__headline">Заинтересовались?</p>
+        <p class="search-hotels__headline title">Заинтересовались?</p>
         <p class="search-hotels__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения
           гостиниц в Седоне</p>
         <a class="search-hotels__link button" href="#" aria-label="Страница поиска гостиницы.">Найти гостиницу</a>
