--- a/source/index.html
+++ b/source/index.html
@@ -20,22 +20,22 @@
       <!-- Закрытое меню класс main-nav--closed, открытое main-nav--opened -->
       <nav class="main-nav main-nav--closed main-nav--nojs">
         <ul class="main-nav__list">
-          <li class="main-nav__item">
+          <li class="main-nav__item main-nav__item--index">
             <a class="main-nav__link main-nav__link--active" href="index.html">
               Главная
             </a>
           </li>
-          <li class="main-nav__item">
+          <li class="main-nav__item main-nav__item--catalog">
             <a class="main-nav__link" href="catalog.html">
               Фото и видео
             </a>
           </li>
-          <li class="main-nav__item">
+          <li class="main-nav__item main-nav__item--form">
             <a class="main-nav__link" href="form.html">
               Форма отзыва
             </a>
           </li>
-          <li class="main-nav__item">
+          <li class="main-nav__item main-nav__item--html">
             <a class="main-nav__link" href="#">
               HTML Academy
             </a>
@@ -163,23 +163,20 @@
       <p class="main-footer__title title">#visitSedona</p>
       <ul class="main-footer__social-list social-list">
         <li class="social-list__item">
-          <a class="social-list__link" href="https://vk.com/htmlacademy"
-            aria-label="Мы в ВКонтакте.">
+          <a class="social-list__link" href="https://vk.com/htmlacademy" aria-label="Мы в ВКонтакте.">
             <svg class="social-list__icon" width="24" height="24" role="img">
               <use xlink:href="img/sprite.svg#icon-vk"></use>
             </svg>
-            </a>
+          </a>
         </li>
         <li class="social-list__item">
-          <a class="social-list__link" href="https://t.me/htmlacademy"
-            aria-label="Мы в Телеграмм.">
+          <a class="social-list__link" href="https://t.me/htmlacademy" aria-label="Мы в Телеграмм.">
             <svg class="social-list__icon" width="24" height="24" role="img">
               <use xlink:href="img/sprite.svg#icon-telegram"></use>
             </svg></a>
         </li>
         <li class="social-list__item">
-          <a class="social-list__link" href="https://www.youtube.com/user/htmlacademyru"
-            aria-label="Мы в Ютуб.">
+          <a class="social-list__link" href="https://www.youtube.com/user/htmlacademyru" aria-label="Мы в Ютуб.">
             <svg class="social-list__icon" width="24" height="24" role="img">
               <use xlink:href="img/sprite.svg#icon-youtube.svg"></use>
             </svg></a>
@@ -187,7 +184,8 @@
       </ul>
 
       <div class="main-footer__copyright copyright">
-        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Сайт HTML Academy.">Разработано
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"
+          aria-label="Сайт HTML Academy.">Разработано
           <svg class="copyright__icon" width="48" height="36" role="img">
             <use xlink:href="img/sprite.svg#htmlacademy.svg"></use>
           </svg>
