add change of header hero-block

--- a/source/index.html
+++ b/source/index.html
@@ -49,8 +49,11 @@
       <section class="main-header__hero-block hero-block">
         <h1 class="visually-hidden">Сайт туристического городка в штате Аризона.</h1>
         <div class="hero-block__text">
-          <img class="hero-block__text-img" src="img/hero-text-index.svg" width="282" height="214"
+          <picture>
+            <source media="(min-width: 768px)" srcset="img/hero-text-index.svg.svg" width="461" height="350">
+            <img class="hero-block__text-img" src="img/hero-text-index.svg" width="282" height="214"
             alt="Welcome to the gorgeous Sedona, beacause the Grand Canyon sucks!">
+          </picture>
         </div>
       </section>
 
